// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanel.js should render an expanded component and match snapshot 1`] = `

<ul class="v-expansion-panel theme--light">
  <li tabindex="0"
      class="v-expansion-panel__container"
  >
    <div class="v-expansion-panel__header">
      <div>
        header
      </div>
      <div class="v-expansion-panel__header__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body"
         style="display: none;"
    >
      content
    </div>
  </li>
</ul>

`;

exports[`VExpansionPanel.js should render an expanded component and match snapshot 2`] = `

<ul class="v-expansion-panel theme--light">
  <li tabindex="0"
      class="v-expansion-panel__container v-expansion-panel__container--active"
  >
    <div class="v-expansion-panel__header">
      <div>
        header
      </div>
      <div class="v-expansion-panel__header__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body expand-transition-enter expand-transition-enter-active"
         style="overflow: hidden; height: 0px; display: block;"
    >
      content
    </div>
  </li>
</ul>

`;

exports[`VExpansionPanel.js should render component and match snapshot 1`] = `

<ul class="v-expansion-panel theme--light">
  <li tabindex="0"
      class="v-expansion-panel__container"
  >
    <div class="v-expansion-panel__header">
      <div>
        header
      </div>
      <div class="v-expansion-panel__header__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body"
         style="display: none;"
    >
      content
    </div>
  </li>
</ul>

`;

exports[`VExpansionPanel.js should render component and match snapshot 2`] = `

<ul class="v-expansion-panel theme--light">
  <li tabindex="0"
      class="v-expansion-panel__container v-expansion-panel__container--active"
  >
    <div class="v-expansion-panel__header">
      <div>
        header
      </div>
      <div class="v-expansion-panel__header__icon">
        <i aria-hidden="true"
           class="v-icon material-icons theme--light"
        >
          keyboard_arrow_down
        </i>
      </div>
    </div>
    <div class="v-expansion-panel__body expand-transition-enter expand-transition-enter-active"
         style="overflow: hidden; height: 0px; display: block;"
    >
      content
    </div>
  </li>
</ul>

`;

exports[`VExpansionPanel.js should show content on v-model change 1`] = `

<ul class="v-expansion-panel theme--light">
  <li tabindex="0"
      class="v-expansion-panel__container"
  >
    <div class="v-expansion-panel__body"
         style="display: none;"
    >
    </div>
  </li>
</ul>

`;
